# Windicator-Rainbow

./: .gitignore  CMakeLists.txt  README.md
include/: BaseWindow.h  Config.h  MainWindow.h
resources/: WinApp.rc  app.manifest  resource.h
src/: MainWindow.cpp  aboutdialog.cpp  desktopWatcher.cpp  notificationIcon.cpp  winMain.cpp
